# GPS_ros_bridge

./: .gitignore  README.md  source_ros.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
catkin_ws/install_isolated/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install_isolated/include/gps_reader/: LoggerBox.h
catkin_ws/install_isolated/share/common-lisp/ros/gps_reader/msg/: LoggerBox.lisp  _package.lisp  _package_LoggerBox.lisp  gps_reader-msg.asd
catkin_ws/install_isolated/share/gennodejs/ros/gps_reader/msg/: LoggerBox.js  _index.js
catkin_ws/install_isolated/share/gps_reader/cmake/: gps_reader-msg-extras.cmake  gps_reader-msg-paths.cmake  gps_readerConfig.cmake
catkin_ws/install_isolated/share/gps_reader/msg/: LoggerBox.msg
catkin_ws/install_isolated/share/roseus/ros/gps_reader/: manifest.l
catkin_ws/install_isolated/share/roseus/ros/gps_reader/msg/: LoggerBox.l
catkin_ws/src/gps_reader/: package.xml
catkin_ws/src/gps_reader/msg/: LoggerBox.msg
catkin_ws/src/gps_reader/scripts/: talker.py
ros2ws/src/gps_listener/: CMakeLists.txt  package.xml
ros2ws/src/gps_listener/src/: gps_listen.cpp
ros2ws/src/gps_reader2/: CMakeLists.txt  bridge_mapping_rules.yaml  package.xml
ros2ws/src/gps_reader2/msg/: LoggerBox.msg
ros2ws/src/ros2_warthog/: CMakeLists.txt  package.xml  ros1_bridge_foreign_mapping.yaml
ros2ws/src/ros2_warthog/src/: ros2_warthog.cpp
