<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_warthog</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nag92@me.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>




  <export>
    
    <ros1_bridge mapping_rules="ros1_bridge_foreign_mapping.yaml"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
